fix(styles): Add `word-wrap: normal` to `pre` tags
To fix word wrapping in Safari browsers

--- a/guide/.vuepress/styles/content.scss
+++ b/guide/.vuepress/styles/content.scss
@@ -32,6 +32,11 @@
 	a code {
 		color: var(--c-text-accent);
 	}
+
+	pre,
+	pre[class*=language-] {
+		word-wrap: normal;
+	}
 }
 
 html.dark .theme-default-content {
